# ecast

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
proto/: grpcast.proto
src/: file_caster.rs  grpc_caster.rs  input_handler.rs  lib.rs  stdout_caster.rs  tcp_caster.rs
src/bins/: ecast.rs  timetest.rs
